--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-plotly",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve ./example/main.js --open",
@@ -12,7 +12,7 @@
     "test:coverage": "vue-cli-service test:unit --coverage --verbose && codecov"
   },
   "dependencies": {
-    "plotly.js": "^1.45.2",
+    "plotly.js": "^1.49.2",
     "vue": "^2.6.9",
     "vue-resize-directive": "^1.2.0"
   },
@@ -55,6 +55,5 @@
     "component"
   ],
   "license": "MIT",
-  "main": "dist/vue-plotly.umd.js",
-  "module": "dist/vue-plotly.common.min.js"
+  "main": "index.js",
 }
