--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frantche/vue-plotly",
+  "name": "@frantche/vue-plotly",
   "version": "1.0.1",
   "private": false,
   "scripts": {
@@ -55,5 +55,6 @@
     "component"
   ],
   "license": "MIT",
-  "main": "index.js"
+  "main": "dist/vue-plotly.umd.js",
+  "module": "dist/vue-plotly.common.min.js"
 }
